[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/icons/chevron-right_white_16x16.svg" type="Texture" id=1]
[ext_resource path="res://src/Toolbox/DebugView/ConfigView/DebugConfigValues.gd" type="Script" id=2]
[ext_resource path="res://src/Toolbox/DebugConfigView.gd" type="Script" id=3]
[ext_resource path="res://src/Toolbox/DebugView/ConfigView/DebugConfigGlobals.gd" type="Script" id=5]
[ext_resource path="res://src/Generic/AnimatedToolButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/icons/arrow-left_white_24x24.svg" type="Texture" id=7]

[node name="DebugConfigView" type="ScrollContainer"]
margin_right = 284.0
margin_bottom = 625.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
margin_right = 284.0
margin_bottom = 625.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="Back" parent="Container" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 284.0
margin_bottom = 32.0
text = "CONFIG debug"
icon = ExtResource( 7 )
signal_on_pressed = "debug_view_displayed"

[node name="Values" type="MarginContainer" parent="Container"]
margin_top = 48.0
margin_right = 284.0
margin_bottom = 230.0
custom_constants/margin_left = 4
script = ExtResource( 2 )

[node name="Data" type="VBoxContainer" parent="Container/Values"]
margin_left = 4.0
margin_right = 284.0
margin_bottom = 182.0

[node name="ValuesLabel" type="Label" parent="Container/Values/Data"]
margin_right = 280.0
margin_bottom = 14.0
text = "Values"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Path" parent="Container/Values/Data" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 280.0
margin_bottom = 42.0
toggle_mode = true
text = "Path"
icon = ExtResource( 1 )
align = 0

[node name="PathData" type="RichTextLabel" parent="Container/Values/Data"]
visible = false
margin_top = 46.0
margin_right = 280.0
margin_bottom = 246.0
rect_min_size = Vector2( 280, 200 )
text = "plachodler 
asd
asd
asd
as"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configuration" parent="Container/Values/Data" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 280.0
margin_bottom = 70.0
toggle_mode = true
text = "Configuration"
icon = ExtResource( 1 )
align = 0

[node name="ConfigurationData" type="RichTextLabel" parent="Container/Values/Data"]
visible = false
margin_top = 72.0
margin_right = 280.0
margin_bottom = 272.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Locale" parent="Container/Values/Data" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 74.0
margin_right = 280.0
margin_bottom = 98.0
toggle_mode = true
text = "Locale"
icon = ExtResource( 1 )
align = 0

[node name="LocaleData" type="RichTextLabel" parent="Container/Values/Data"]
visible = false
margin_top = 100.0
margin_right = 280.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Variables" parent="Container/Values/Data" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 102.0
margin_right = 280.0
margin_bottom = 126.0
toggle_mode = true
text = "Variables"
icon = ExtResource( 1 )
align = 0

[node name="VariablesData" type="RichTextLabel" parent="Container/Values/Data"]
visible = false
margin_top = 128.0
margin_right = 280.0
margin_bottom = 328.0
rect_min_size = Vector2( 0, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cache" parent="Container/Values/Data" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 130.0
margin_right = 280.0
margin_bottom = 154.0
toggle_mode = true
text = "Cache"
icon = ExtResource( 1 )
align = 0

[node name="CacheData" type="RichTextLabel" parent="Container/Values/Data"]
visible = false
margin_top = 156.0
margin_right = 280.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" parent="Container/Values/Data" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 158.0
margin_right = 280.0
margin_bottom = 182.0
toggle_mode = true
text = "Info"
icon = ExtResource( 1 )
align = 0

[node name="InfoData" type="RichTextLabel" parent="Container/Values/Data"]
visible = false
margin_top = 184.0
margin_right = 280.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Container"]
margin_top = 246.0
margin_right = 284.0
margin_bottom = 250.0

[node name="Globals" type="MarginContainer" parent="Container"]
margin_top = 266.0
margin_right = 284.0
margin_bottom = 364.0
custom_constants/margin_left = 4
script = ExtResource( 5 )

[node name="Data" type="VBoxContainer" parent="Container/Globals"]
margin_left = 4.0
margin_right = 284.0
margin_bottom = 98.0

[node name="GlobalsLabel" type="Label" parent="Container/Globals/Data"]
margin_right = 280.0
margin_bottom = 14.0
text = "Globals"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Workspaces" parent="Container/Globals/Data" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 280.0
margin_bottom = 42.0
toggle_mode = true
text = "Workspaces"
icon = ExtResource( 1 )
align = 0

[node name="WorkspacesData" type="RichTextLabel" parent="Container/Globals/Data"]
visible = false
margin_top = 44.0
margin_right = 280.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Views" parent="Container/Globals/Data" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 280.0
margin_bottom = 70.0
toggle_mode = true
text = "Views"
icon = ExtResource( 1 )
align = 0

[node name="ViewsData" type="RichTextLabel" parent="Container/Globals/Data"]
visible = false
margin_top = 72.0
margin_right = 280.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" parent="Container/Globals/Data" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 74.0
margin_right = 280.0
margin_bottom = 98.0
toggle_mode = true
text = "Info"
icon = ExtResource( 1 )
align = 0

[node name="InfoData" type="RichTextLabel" parent="Container/Globals/Data"]
visible = false
margin_top = 100.0
margin_right = 280.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 200 )
__meta__ = {
"_edit_use_anchors_": false
}
